--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Work In Progress<title>
+  <title>Work In Progress</title>
 </head>
 <body>
-    Hello World
+    WIP
 </body>
 </html>
